update pkmn link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <nav class="navv">
         <ul>
             <li>
-                <a href="index.html" class="pokeme">My pokemon project!</a>
+                <a href="/pokemon/pkmn.html" class="pokeme">My pokemon project!</a>
             </li>
         </ul>
     </nav>
