--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <header><h1>My Website!
     </h1></header>
     <h3>The Pokemon Project</h3>
-    <section id="projects">
-        <p id="pokemon">
-            The Pokemon project
 
-        </p>
+    <section>
+        <div class="page-card">
+            <div class="page-title">Pokemon Project</div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQf-4xv1ZB0t0_8nUxnrRNcAbE8Nm5VB8dzFbBE5tjp_luxT6U:https://cdn.shopify.com/s/files/1/0568/2298/8958/files/cutest-pokemon-characters_3_480x480.png%3Fv%3D1711101526&s" alt="Mew">
+           
+            <div class="page-description">Mew is a very cute baby pokemon</div>
+        </div>
     </section>
 
    
