initiated request page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <li>
                 <a href="/pokemon/pkmn.html" class="pokeme">My pokemon project!</a>
             </li>
+            <li><a href="reqform/request.html">Request Form</a></li>
         </ul>
     </nav>
-
+    <main>
     <header><h1>My Website!
     </h1></header>
     <h3>The Pokemon Project</h3>
@@ -27,6 +28,7 @@
             <div class="page-description">Mew is a very cute baby pokemon</div>
         </div>
     </section>
+    </main>
 
    
     
