--- a/reqform/request.html
+++ b/reqform/request.html
@@ -15,10 +15,11 @@
 
     <label for="type">Request Type:</label>
     <select name="type" id="type">
-        <option value="1">Counselor</option>
-        <option value="2">Admin</option>
-        <option value="3">Teacher</option>
-        <option value="4">Security</option>
+        <option value="1">--Select--</option>
+        <option value="2">Counselor</option>
+        <option value="3">Admin</option>
+        <option value="4">Teacher</option>
+        <option value="5">Security</option>
     </select>
 </body>
 </html>
