--- a/reqform/request.html
+++ b/reqform/request.html
@@ -9,11 +9,20 @@
 <body>
     <header><h1>Request Form</h1></header>
     <form action="">
+        <fieldset id="personal information">
+            <legend>Request form</legend>
         <label for="name">Name:</label>
         <input type="text" name="name" id="name">
-    </form>
-
-    <label for="type">Request Type:</label>
+        <label for="grade">Grade:</label>
+        <div id="gradeinput">
+        <label for="nine"><input type="radio" name="grade">9th</label>
+        <label for="ten"><input type="radio" name="grade">10th</label>
+        <label for="elev"><input type="radio" name="grade">11th</label>
+        <label for="twelf"><input type="radio" name="grade">12th</label>
+        </div>
+     </fieldset>
+    <fieldset id="appinfo">
+        <label for="type">Request Type:</label>
     <select name="type" id="type">
         <option value="1">--Select--</option>
         <option value="2">Counselor</option>
@@ -21,5 +30,15 @@
         <option value="4">Teacher</option>
         <option value="5">Security</option>
     </select>
+        <label for="date">Date:</label>
+        <input type="date" name="date" id="date">
+        <label for="time">Time:</label>
+        <input type="time" name="time" id="time">
+    </fieldset>
+
+
+
+    <div id="submitbtn">Submit</div>
+    </form>
 </body>
 </html>
