--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
      <nav class="navv">
         <ul>
             <li>
-                <a href="/pokemon/pkmn.html" class="pokeme">My pokemon project!</a>
+                <a href="./pokemon/pkmn.html" class="pokeme">My pokemon project!</a>
             </li>
-            <li><a href="reqform/request.html">Request Form</a></li>
+            <li><a href="./reqform/request.html">Request Form</a></li>
+            <li><a href="./Gallery/gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
