--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="rf.css">
 </head>
 <body>
+
+
      <nav class="navv">
         <ul>
             <li>
@@ -24,7 +26,7 @@
     <section>
         <div class="page-card">
             <div class="page-title">Pokemon Project</div>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQf-4xv1ZB0t0_8nUxnrRNcAbE8Nm5VB8dzFbBE5tjp_luxT6U:https://cdn.shopify.com/s/files/1/0568/2298/8958/files/cutest-pokemon-characters_3_480x480.png%3Fv%3D1711101526&s" alt="Mew">
+                <img class="Mew" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQf-4xv1ZB0t0_8nUxnrRNcAbE8Nm5VB8dzFbBE5tjp_luxT6U:https://cdn.shopify.com/s/files/1/0568/2298/8958/files/cutest-pokemon-characters_3_480x480.png%3Fv%3D1711101526&s" alt="Mew">
            
             <div class="page-description">Mew is a very cute baby pokemon</div>
         </div>
