--- a/pokemon/pkmn.html
+++ b/pokemon/pkmn.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <nav class="navv">
+        <ul>
+            <li>
+                <a href="./pokemon/pkmn.html" class="pokeme">My pokemon project!</a>
+            </li>
+            <li><a href="../reqform/request.html">Request Form</a></li>
+            <li><a href="../Gallery/gallery.html">Gallery</a></li>
+            <li><a href="../index.html"></a>Home Page</li>
+        </ul>
+    </nav>
     <div id="pk-holder"></div>
 
     <div id="foe-holder"></div>
