--- a/reqform/request.html
+++ b/reqform/request.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="request.css">
 </head>
 <body>
+     <nav class="navv">
+        <ul>
+            <li>
+                <a href="./pokemon/pkmn.html" class="pokeme">My pokemon project!</a>
+            </li>
+            <li><a href="../reqform/request.html">Request Form</a></li>
+            <li><a href="../Gallery/gallery.html">Gallery</a></li>
+            <li><a href="../index.html"></a>Home Page</li>
+        </ul>
+    </nav>
     <header><h1>Request Form</h1></header>
     <form action="">
         <fieldset id="personal information">
