--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </li>
             <li><a href="./reqform/request.html">Request Form</a></li>
             <li><a href="./Gallery/gallery.html">Gallery</a></li>
+            <li><a href="/Bootstrap Test/bs.html"></a></li>
         </ul>
     </nav>
     <main>
