--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <li>
                 <a href="./pokemon/pkmn.html" class="pokeme">My pokemon project!</a>
             </li>
-            <li><a href="./reqform/request.html">Request Form</a></li>
-            <li><a href="./Gallery/gallery.html">Gallery</a></li>
-            <li><a href="/Bootstrap Test/bs.html"></a></li>
+                 <li><a href="./reqform/request.html">Request Form</a></li>
+                 <li><a href="./Gallery/gallery.html">Gallery</a></li>
+                 <li><a href="../Bootstrap Test/bs.html"></a>Bootstrap</li>
         </ul>
     </nav>
     <main>
